# YumifyBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/config/: __init__.py  config.py
bot/core/: headers.py  registrator.py  tapper.py
bot/utils/: launcher.py
