[tool.poetry]
name = "yumifybot"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
pydantic-settings = "^2.5.2"
aiohttp = "^3.10.10"
aiohttp-proxy = "^0.1.2"
better-proxy = "^1.2.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
